local/logs/project.log
2019-12-24T00:54:38.732Z - normal: Load ~/.CocosCreator/settings.json
2019-12-24T00:54:38.824Z - normal: Initializing Asset Database
2019-12-24T00:54:38.853Z - normal: checking language setting...
2019-12-24T00:54:38.853Z - normal: Language: zh
2019-12-24T00:54:40.722Z - success: preview server running at http://localhost:7456
2019-12-24T00:54:40.733Z - success: protocol editor-framework registered
2019-12-24T00:54:40.733Z - success: protocol app registered
2019-12-24T00:54:40.733Z - success: protocol theme registered
2019-12-24T00:54:40.733Z - success: protocol packages registered
2019-12-24T00:54:40.733Z - success: protocol uuid registerred
2019-12-24T00:54:40.733Z - success: protocol db registerred
2019-12-24T00:54:40.734Z - success: protocol thumbnail registerred
2019-12-24T00:54:40.734Z - success: protocol unpack registerred
2019-12-24T00:54:40.734Z - success: protocol disable-commonjs registerred
2019-12-24T00:54:40.799Z - normal: connected!
2019-12-24T00:54:40.800Z - normal: Check project /Users/huabo/Projects/iptv_wuxia
2019-12-24T00:54:40.801Z - normal: Initializing project /Users/huabo/Projects/iptv_wuxia
2019-12-24T00:54:41.138Z - success: adapters loaded
2019-12-24T00:54:41.160Z - success: asset-db-debugger loaded
2019-12-24T00:54:41.369Z - success: fb-audience-network loaded
2019-12-24T00:54:41.440Z - success: fb-live-stream loaded
2019-12-24T00:54:41.443Z - success: google-play-instant loaded
2019-12-24T00:54:41.454Z - success: huawei-runtime loaded
2019-12-24T00:54:41.455Z - success: jkw-adapter loaded
2019-12-24T00:54:41.470Z - success: jsb-adapter loaded
2019-12-24T00:54:41.495Z - success: oppo-runtime loaded
2019-12-24T00:54:41.510Z - success: package-manager loaded
2019-12-24T00:54:41.513Z - success: runtime-dev-tools loaded
2019-12-24T00:54:41.531Z - success: sdkbox loaded
2019-12-24T00:54:41.534Z - success: ui-kit-preview-extra loaded
2019-12-24T00:54:41.547Z - success: ui-kit-preview loaded
2019-12-24T00:54:41.579Z - success: vivo-runtime loaded
2019-12-24T00:54:41.595Z - success: alipay-minigame loaded
2019-12-24T00:54:41.640Z - success: assets loaded
2019-12-24T00:54:41.643Z - success: baidugame-opendata loaded
2019-12-24T00:54:41.646Z - success: baidugame loaded
2019-12-24T00:54:41.660Z - success: builder loaded
2019-12-24T00:54:42.191Z - success: cocos-services loaded
2019-12-24T00:54:42.210Z - success: console loaded
2019-12-24T00:54:42.220Z - success: fb-instant-games loaded
2019-12-24T00:54:42.224Z - success: game-window loaded
2019-12-24T00:54:42.225Z - success: google-instant-games loaded
2019-12-24T00:54:42.231Z - success: hierarchy loaded
2019-12-24T00:54:42.236Z - success: inspector loaded
2019-12-24T00:54:43.255Z - success: cpk-publish loaded
2019-12-24T00:54:43.258Z - success: keystore loaded
2019-12-24T00:54:43.284Z - success: node-library loaded
2019-12-24T00:54:43.285Z - success: open-recent-items loaded
2019-12-24T00:54:43.301Z - success: package-asset loaded
2019-12-24T00:54:43.303Z - success: preferences loaded
2019-12-24T00:54:43.306Z - success: project-exporter loaded
2019-12-24T00:54:43.309Z - success: project-importer loaded
2019-12-24T00:54:43.312Z - success: project-settings loaded
2019-12-24T00:54:43.334Z - success: scene loaded
2019-12-24T00:54:43.336Z - success: simulator-debugger loaded
2019-12-24T00:54:43.336Z - success: sprite-editor loaded
2019-12-24T00:54:43.353Z - success: store loaded
2019-12-24T00:54:43.357Z - success: timeline loaded
2019-12-24T00:54:43.360Z - success: wechatgame-opendata loaded
2019-12-24T00:54:43.371Z - success: wechatgame loaded
2019-12-24T00:54:43.374Z - success: xiaomi-runtime loaded
2019-12-24T00:54:44.226Z - info: Cocos Service load base data!
2019-12-24T00:54:44.386Z - normal: Initializing Cocos2d
2019-12-24T00:54:46.537Z - normal: Initializing engine extends
2019-12-24T00:54:49.339Z - normal: Loading packages
2019-12-24T00:54:49.345Z - normal: Watching packages
2019-12-24T00:54:49.550Z - normal: Run Application
2019-12-24T01:16:30.218Z - failed: [db-task][sync-changes] Failed to import asset /Users/huabo/Projects/iptv_wuxia/assets/Script/Controller/BloodController.js, message: Compile error: SyntaxError: /Users/huabo/Projects/iptv_wuxia/assets/Script/Controller/BloodController.js: Unexpected token (38:8)
  36 |             // this.currentBlood/this.totalBlood
  37 |             _damage/this.totalBlood*
> 38 |         },this)
     |         ^
  39 |     },
  40 | 
  41 |     start () {
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4454:13)
    at Parser.pp.unexpected (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1761:8)
    at Parser.pp$3.parseExprAtom (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3750:12)
    at Parser.pp$3.parseExprSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3474:19)
    at Parser.pp$3.parseExprOp (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3435:42)
    at Parser.pp$3.parseExprOp (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3438:19)
    at Parser.pp$3.parseExprOps (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3408:17)
    at Parser.pp$3.parseMaybeConditional (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3344:19)
2019-12-24T08:00:02.860Z - info: shutdown preview server
